..-..-.... (0.6-pre1-cvs)	Volker Gropp <bwmng(at)gropp.org>
	
	* acinclude.m4, configure.in, aclocal.m4, Makefile.in, Makefile.am: added 
	full auto* support for a proper `make install`

	* defines.h: removed MAJOR, MINOR, EXTRA and changed to VERSION from
	config.h and configure

	* changelog: renamed to ChangeLog and changed to a proper format

	* THANKS: added
	
	* process.c: fixed avg was wrong on startup and when delay was changed
	while running

	* retrieve.c: small cleanup of check_if_up().

	* bwm-ng.c: fixed memleak of if_name and myscr in deinit().

	* src/output.c: fixed from single to double quotes in order to valide with
	w3c (reported by -f <f@obiit.org>)

	* bwm-ng.conf-example: fixed default procfile to /proc/net/dev (reported
	by -f <f@obiit.org>)

	* src/options.c: fixed error and exit if outfile cant be open (reported by
	-f <f@obiit.org>)

	* src/bwm-ng.c: fixed html footer output to stdout when deamon, header and
	outfile set (reported by -f <f@obiit.org>)

	* src/options.c: hopefully fixed segfault when empty lines in config in
	openbsd 3.8 (reply is welcome) (reported by -f <f@obiit.org>)

02-20-2005	(0.5)	Volker Gropp <bwmng(at)gropp.org>
	
	* added: outfile and daemonize for html output
	
	* fixes: for IRIX
	
	* added: bit/second output 
		(Michael Eckhoff <mreckhof(at)gmail.com>)
	
	* added: errors/s output
	
	* removed: -p and -b, added -u/--unit <value>
	
	* added: max stats (--type,-T and 't')
	
	* added: sum stats
	
	* moved: alot functions from retrieve.c into process.c
	
	* added: average stats
	
	* output.c: moved help output into help.c
	
	* help.c,curses.c: added onlinehelp for curses output (key 'h')
	
	* curses.c,bwm-ng.c: resize term in curses output
	
	* fixed: libstatgrab input segfault
	
	* fixed: /etc/bwm-ng.conf and ~/.bwm-ng.conf were not 
	skipped if configfile was specified in cmdline
	
	* added: optional argument for -D, -S and -d
	
	* bwm-ng.1: added manpage
	