@@ -102,15 +102,22 @@ void print_online_help() {
     mvwprintw(helpwin,3,2,"'q'  exit");
     mvwprintw(helpwin,4,2,"'+'  increases timeout by 100ms");
     mvwprintw(helpwin,5,2,"'-'  decreases timeout by 100ms");
-    mvwprintw(helpwin,6,2,"'d'  switch KB and auto assign Byte/KB/MB/GB");
+    if (output_method==CURSES_OUT) mvwprintw(helpwin,6,2,"'d'  switch KB and auto assign Byte/KB/MB/GB");
+    else mvwprintw(helpwin,6,2,"'d'  cycle: show interfaces step by step");
     mvwprintw(helpwin,7,2,"'a'  cycle: show all interfaces, only those which are up,");
     mvwprintw(helpwin,8,2,"            only up and not hidden");
     mvwprintw(helpwin,9,2,"'s'  sum hidden ifaces to total aswell or not");
     mvwprintw(helpwin,10,2,"'n'  cycle: input methods");
-    mvwprintw(helpwin,11,2,"'u'  cycle: bytes,bits,packets,errors");
+    if (output_method==CURSES_OUT) { mvwprintw(helpwin,11,2,"'u'  cycle: bytes,bits,packets,errors");
 #if EXTENDED_STATS    
     mvwprintw(helpwin,12,2,"'t'  cycle: current rate, max, sum since start, average for last 30s");
+#endif 
+    }
+    else {
+#if EXTENDED_STATS    
+      mvwprintw(helpwin,11,2,"'t'  cycle: current rate, max, sum since start, average for last 30s");
 #endif    
+    };
     mvwprintw(helpwin,14,2," press any key to continue... ");
     wrefresh(helpwin);
     timeout(-1);
